common_base_util: common_base_ui  : fido_asm        : PS              : tag:v0.3.60

--- a/publish_arr_jar.gradle
+++ b/publish_arr_jar.gradle
@@ -31,7 +31,7 @@ afterEvaluate {
                     artifact androidSourcesJar
                 } else if (project.plugins.hasPlugin("java-library")) {
                     from components.java
-                    artifact javadocJar
+//                    artifact javadocJar
                     artifact javaSourcesJar
                 }
 //                def projectName = project.name
