common_base_util: common_base_ui  : fido_asm        : PS              : 发布模式时gradle.properties 新增 UseLocal字段判断

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -167,6 +167,8 @@
         <activity android:name=".common_utils.asm.replace.ReplaceClassTestAc"/>
         <activity android:name=".common_utils.device_info.DeviceInfoAc"/>
         <activity android:name=".common_utils.asm.AsmHookActivity"/>
+        <activity android:name=".common_utils.login.LoginAc"/>
+        <activity android:name=".common_utils.login.UserProfileAc"/>
     </application>
 
 </manifest>
