--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,15 @@ buildscript {
     }
 
 
+    def useLocal = project.properties['USE_LOCAL'].toString().toBoolean()
+    if (!useLocal) {
+        dependencies {
+            classpath 'com.github.SevenUpup.common_utils:fido_asm:v0.3.60'
+        }
+    }
     //远程插件依赖
 //    dependencies {
-//        classpath 'com.github.SevenUpup.common_utils:fido_asm:v0.3.45'
+//        classpath 'com.github.SevenUpup.common_utils:fido_asm:v0.3.60'
 //    }
 }
 
@@ -24,7 +30,7 @@ plugins {
     id 'com.google.devtools.ksp' version "1.7.10-1.0.6" apply false
 
     // 在 Project 级别的 build.gradle 中添加我们的插件依赖
-//    id 'com.fido.plugin.asm' version "1.0.0"
+    id 'com.fido.plugin.asm' version "1.0.0"
 }
 
 apply from: "dependent.gradle"
