common_base_util: common_base_ui  : fido_asm        : PS              : 更新方法替换插件使用方式，提供enable开关

--- a/dependent.gradle
+++ b/dependent.gradle
@@ -1,5 +1,5 @@
 ext {
-//    fido_asm_replace_method_class = ["com.fido.common.common_utils.device_info.PrivacyUtil"]
+    fido_asm_replace_method_class = [/*"com.fido.common.common_utils.device_info.PrivacyUtil"*/"com.fido.common.common_utils.device_info.TestReplaceMethod"]
     fido_asm_replace_method_enable = true
 
     versions = [
