--- a/gradle.properties
+++ b/gradle.properties
@@ -37,8 +37,8 @@ POM_DEVELOPER_ID=sevenupup
 POM_DEVELOPER_NAME=Tao Hu
 POM_DEVELOPER_URL=https://github.com/SevenUpup/
 
-#???????????????
-USE_LOCAL=false
+#????? false , true use local maven
+USE_LOCAL=true
 
 #org.gradle.java.home=F\:\\jdk11
 
