--- a/dependent.gradle
+++ b/dependent.gradle
@@ -44,6 +44,8 @@ ext {
                     'room_compiler'         : 'androidx.room:room-compiler:2.4.2',
 
                     'work_manager'          : "androidx.work:work-runtime-ktx:${versions.work_manager_version}",
+
+                    'data_store'            : "androidx.datastore:datastore-preferences:1.0.0",
             ],
 
             //第三方
