common_base_util: common_base_ui  : fido_asm        : PS              : 1.新增update_params脚本文件，可以通过json配置指定类和参数，好像比ASM还方便点😅 2.BrightnessUtils新增屏幕常亮方法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -170,6 +170,8 @@
         <activity android:name=".common_utils.login.LoginAc"/>
         <activity android:name=".common_utils.login.UserProfileAc"/>
         <activity android:name=".common_utils.design_pattern.DesignPatternAc"/>
+        <activity android:name=".common_utils.jetpack.JetPackAc"/>
+        <activity android:name=".common_utils.jetpack.JetPackageContainerAc"/>
     </application>
 
 </manifest>
