common_base_util: common_base_ui  : fido_asm        : PS              : 1.新增update_params脚本文件，可以通过json配置指定类和参数，好像比ASM还方便点😅 2.BrightnessUtils新增屏幕常亮方法

--- a/update_params/config.json
+++ b/update_params/config.json
@@ -11,7 +11,12 @@
   },
   {
     "file_path": "../common_utils/app/src/main/java/com/fido/common/common_utils/design_pattern/DesignPatternAc.kt",
-    "old_value": "private var isChange3 = \"66\"",
-    "new_value": "private var isChange3 = \"77\""
+    "old_value": "private var isChange3 = \"77\"",
+    "new_value": "private var isChange3 = \"66\""
+  },
+  {
+    "file_path": "../common_utils/app/src/main/java/com/fido/common/common_utils/design_pattern/DesignPatternAc.kt",
+    "old_value": "private var isChange4 = \"1234\"",
+    "new_value": "private var isChange4 = \"4567\""
   }
 ]
