common_base_util: 新增全局灰度视图工具 GlobalGray.kt common_base_ui  : fido_asm        : PS              :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,6 +176,9 @@
         <activity android:name=".common_utils.result.KtResultAc"/>
         <activity android:name=".common_utils.pdf.AndroidXPdfActivity"/>
         <activity android:name=".common_utils.ac_factory2.LayoutFactory2Ac"/>
+
+        <activity android:name=".common_utils.coroutine.CoroutineTestAc"/>
+
     </application>
 
 </manifest>
