--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,14 @@
     <uses-permission android:name="android.permission.READ_CALENDAR"/>
     <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <!-- 蓝牙相关权限 -->
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+
     <application
         android:name=".common_utils.App"
         android:allowBackup="true"
@@ -178,6 +186,8 @@
         <activity android:name=".common_utils.ac_factory2.LayoutFactory2Ac"/>
 
         <activity android:name=".common_utils.coroutine.CoroutineTestAc"/>
+        <activity android:name=".common_utils.blue_tooth.BlueToothAc"/>
+        <activity android:name=".common_utils.webview.WebViewAc"/>
 
     </application>
 
