--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -188,8 +188,8 @@
         <activity android:name=".common_utils.coroutine.CoroutineTestAc"/>
         <activity android:name=".common_utils.blue_tooth.BlueToothAc"/>
         <activity android:name=".common_utils.webview.WebViewAc"/>
+        <activity android:name=".common_utils.jetpack.coroutine.KotlinCoroutineAc"/>
 
-        <!--  -->
     </application>
 
 </manifest>
