--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -191,6 +191,7 @@
         <activity android:name=".common_utils.webview.WebViewAc"/>
         <activity android:name=".common_utils.jetpack.coroutine.KotlinCoroutineAc"/>
         <activity android:name=".common_utils.customview.SlidingConflictAc"/>
+        <activity android:name=".common_utils.customview.MapDragAc"/>
     </application>
 
 </manifest>
