common_base_util: common_base_ui  : feature DragLookMoreContainer.kt fido_asm        : feature PlatformIpUtils 获取本地/公网ip地址 PS              :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -192,6 +192,7 @@
         <activity android:name=".common_utils.jetpack.coroutine.KotlinCoroutineAc"/>
         <activity android:name=".common_utils.customview.SlidingConflictAc"/>
         <activity android:name=".common_utils.customview.MapDragAc"/>
+        <activity android:name=".common_utils.handler.HandlerInKotlinAc"/>
     </application>
 
 </manifest>
