common_base_util: common_base_ui  : feature DragLookMoreContainer.kt fido_asm        : feature PlatformIpUtils 获取本地/公网ip地址 PS              :协程测试代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -188,6 +188,8 @@
 
         <activity android:name=".common_utils.coroutine.CoroutineTestAc"/>
         <activity android:name=".common_utils.blue_tooth.BlueToothAc"/>
+        <activity android:name=".common_utils.blue_tooth.BlueToothSendFileComputerActivity"/>
+
         <activity android:name=".common_utils.webview.WebViewAc"/>
         <activity android:name=".common_utils.jetpack.coroutine.KotlinCoroutineAc"/>
         <activity android:name=".common_utils.customview.SlidingConflictAc"/>
