common_base_util: common_base_ui  : feature DragLookMoreContainer.kt fido_asm        : feature PlatformIpUtils 获取本地/公网ip地址 PS              :JS交互测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -195,6 +195,9 @@
         <activity android:name=".common_utils.customview.SlidingConflictAc"/>
         <activity android:name=".common_utils.customview.MapDragAc"/>
         <activity android:name=".common_utils.handler.HandlerInKotlinAc"/>
+
+        <activity android:name=".common_utils.js.JsAc"/>
+
     </application>
 
 </manifest>
