common_base_util: common_base_ui  : feature DragLookMoreContainer.kt fido_asm        : feature PlatformIpUtils 获取本地/公网ip地址 PS              : feature DispatchEventAc.kt 事件分发测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -198,6 +198,8 @@
 
         <activity android:name=".common_utils.js.JsAc"/>
 
+        <activity android:name=".common_utils.event_dispatch.DispatchEventAc"/>
+
     </application>
 
 </manifest>
